Upgrade dependencies, parent POM, modernize code for Java 21
- Bump jcabi parent POM 1.19 -> 1.44.0 (raises baseline to Java 8 source)
- Upgrade jcabi-http 1.11 -> 2.1.0 and pin jcabi-aspects/log/immutable
- Migrate javax.json -> jakarta.json (managed by parent)
- Bump scribe 1.3.5 -> 1.3.7
- Drop unused jersey 1.19, jsr311-api, javax.servlet dependencies
- Replace HttpHeaders.AUTHORIZATION with private constant to drop ws-rs dep
- Migrate JUnit 4 -> JUnit 5 (Jupiter), convert TestRule to Extension
- Refactor classes to satisfy Qulice 0.27.6 checks (no method calls in
  constructors, FunctionalInterface, diamond operator, etc.)
- Modernize javadoc, drop @author/@version tags
- Add empty src/test/aspect for the AspectJ test compile mojo